Add eavesdrop=true when supported

Bug https://bugs.freedesktop.org/show_bug.cgi?id=39140